# khmer-g2p-neural

./: .gitignore  README.md  Untitled0.ipynb  audit.txt  khmer_g2p_inference.ipynb  processing.ipynb  pyproject.toml
.github/workflows/: tests.yml
checkpoints_v04/: history.json  src_vocab.json  test_metrics.json  tgt_vocab.json
data/: lexicon.clean.tsv  lexicon.tsv
examples/: inference_evaluation.ipynb  pipeline_demo.ipynb
scripts/: audit_lexicon.py  build_diagrams.py  clean_lexicon.py  live_test.py  phonemize_metadata.py
src/khmer_g2p/: __init__.py  hybrid.py  lexicon.py  normalizer.py  phonemes.py  pipeline.py  segmenter.py
src/khmer_g2p/neural/: __init__.py  aux_labels.py  cli.py  dataset.py  ema.py  ensemble.py  finetune.py  infer.py  metrics.py  model.py  phoneme_tokenizer.py  pretrain.py  train.py  vocab.py
tests/: test_aux_labels.py  test_beam_length_norm.py  test_ctc_head.py  test_ensemble.py  test_finetune.py  test_hybrid.py  test_lexicon.py  test_normalizer.py  test_phoneme_tokenizer.py  test_pretrain.py  test_segmenter.py  test_v04_recipe.py
